--- a/css/lap.css
+++ b/css/lap.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #4eb3b3;
+    background-color: #000000;
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%239C92AC' fill-opacity='0.1'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
@@ -19,22 +19,6 @@ body{
     width: 50px;
 } */
 
-
-.container{
-    width: 100%;
-    padding: 10px;
-}
-
-.menu-btn{
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-}
-
-/* Showcase */
-.showcase{
-    padding: 50px;
-}
 
 /* Nav Left------------------------------------ */
 .nav-main ul{
@@ -62,14 +46,14 @@ body{
 /* News Cards */
 .news-cards{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 
 
 /* Cards Banner One */
 .cards-banner-one .content{
-    width: 80%;
+    width: 40%;
     padding: 90px 0 0 30px;
     color: white;
 }
@@ -77,29 +61,7 @@ body{
 
 /* Cards Banner Two */
 .cards-banner-two .content{
-    width: 70%;
+    width: 50%;
     padding: 100px 0 0 30px;
 }
 
-
-@media (min-width: 768px) {
-    body{
-        background-color: #2d94cf;
-        }
-    
-    .container{
-        width: 90%;
-    }
-
-    .menu-btn{
-        display: none;
-    }
-
-    .news-cards{
-        grid-template-columns: repeat(4, 1fr);
-    }
-
-    .footer-container{
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
