--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,23 @@ ul{
     list-style: none;
 }
 
+/* .nav-main ul.nav-menu{
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #2f3640;
+} */
+
 .container{
     width: 90%;
     margin: auto;
 }
+
+/* una vez que tengas el logo 
+.nav-brand{
+    width: 50px;
+} */
 
 hr{
     border: 1px solid black;
@@ -108,4 +121,149 @@ hr{
     text-decoration: underline;
 }
 
+
+
+/* Cards Banner One */
+.cards-banner-one{
+    width: 100%;
+    height: 350px;
+    background: url('./assets/images/tech-red.jpg') no-repeat center center/cover;
+    margin-bottom: 40px;
+}
+
+.cards-banner-one .content{
+    width: 100%;
+    padding: 90px 20px 0 30px;
+    color: white;
+}
+
+.cards-banner-one p,
+.cards-banner-one h2{
+    margin: 10px 0 20px 0;
+}
+
+
+/* Cards Banner Two */
+.cards-banner-two{
+    width: 100%;
+    height: 350px;
+    background: url('./assets/images/image-five.jpg') no-repeat center center/cover;
+}
+
+.cards-banner-two .content{
+    width: 100%;
+    padding: 90px 20px 0 30px;
+}
+
+
+/* Social */
+.social{
+    margin: 50px;
+}
+
+.social p{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.links a{
+    margin-bottom: 0 30px;
+}
+
+.links a i{
+    font-size: 3rem;
+}
+
+
+
+/* Footer-links */
+.footer-links{
+    background: #2f3640;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px 0;
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.footer-container ul{
+    margin: 0 auto;
+}
+
+.footer-container ul li{
+    line-height: 2.8;
+}
+
+
+/* Footer */
+.footer{
+    background: #2f3640;
+    color: #616161;
+    font-size: 12px;
+    padding: 20px 0;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+
+@media (max-width: 767px) {
+    .menu-btn{
+        position: absolute;
+        cursor: pointer;
+        top: 15px;
+        right: 30px;
+        z-index: 2;
+        font-size: 1.5rem;
+    }
+
+    .nav-main ul.nav-menu{
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #2f3640;
+        height: 100%;
+        padding: 30px;
+        opacity: .9;
+        transform: translate(-400px);  /* colocamos el sidebar escondido */
+        transition: transform .5s ease-in-out;
+    }
+
+    .nav-main ul.nav-menu.show{
+        transform: translate(-20px);
+    }
+
+    .nav-main ul.nav-menu li{
+        padding: 20px;
+        font-size: 14px;
+    }
+        
+    .nav-main ul.nav-menu li:hover{
+        text-decoration: underline;
+    }
+
+    /* con esta eccion logramos poner el icono de lupa a la derecha */
+    .nav-main ul.nav-menu-right{
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 50px;
+    }
+    .nav-main ul.nav-menu-right:hover{
+        text-decoration: underline;
+    }
+
+}
 
